# id-allocator

./: .gitmodules  CMakeLists.txt
cmake/modules/: FindLMDB.cmake
src/: CMakeLists.txt  allocator.cc  data_store.cc  example.cc  index_store.cc
src/include/: allocator.h  data_store.h  index_store.h
